--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
         "dotenv-safe": "^6.0.0",
         "express": "^4.16.3",
         "express-validation": "^3.0.6",
+        "http-status": "^1.5.0",
+        "morgan": "^1.10.0",
         "mysql2": "^1.6.1",
         "sequelize": "^4.38.0",
         "sequelize-cli": "^4.0.0"
