fix: server-side add volume for node_modules at docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,13 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - mysql-db
+    environment:
+      - NODE_ENV=development
     ports:
       - "5000:5000"
     volumes:
         - "./server:/app"
+        - "/app/node_modules"
     expose:
       - "5000"
 
