--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,8 +8,8 @@ ENV NODE_ENV $NODE_ENV
 RUN mkdir /app
 WORKDIR /app
 #ADD package.json package-lock.json .env /app/
-COPY ["package.json", "package-lock.json", ".env", ".babelrc", ".sequelizerc", "/app/"]
-RUN npm i
+COPY ["package.json", ".env", ".babelrc", ".sequelizerc", "/app/"]
+RUN npm install
 ADD . /app
 
 CMD ["npm", "run", "dev"]
