--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "node": ">=11"
     },
     "scripts": {
-        "dev": "cross-env NODE_ENV=development nodemon ./src/index.js -L --exec babel-node ./src/index.js",
+        "dev": "./node_modules/.bin/cross-env NODE_ENV=development nodemon ./src/index.js -L --exec babel-node ./src/index.js",
         "migration": "./node_modules/.bin/sequelize db:migrate",
         "seed": "./node_modules/.bin/sequelize db:migrate:undo:all",
         "migration:undo": "./node_modules/.bin/sequelize db:migrate:undo",
@@ -27,7 +27,8 @@
         "joi": "^10.4.1",
         "morgan": "^1.10.0",
         "mysql2": "^1.6.1",
-        "sequelize": "^4.38.0"
+        "sequelize": "^4.38.0",
+        "cross-env": "^7.0.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.11.6",
@@ -43,7 +44,6 @@
         "apidoc": "^0.17.5",
         "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
-        "cross-env": "^7.0.2",
         "mocha": "^8.1.3",
         "nodemon": "^1.18.3",
         "sequelize-cli": "^4.1.1",
